samples/_failures_safe/1761289992_717d78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc484d43.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_bc484d43.c:177:5: error: expected declaration or statement at end of input
  177 |     free(visited);
      |     ^~~~
